src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> ext_decl
Rule 2     program -> program ext_decl
Rule 3     ext_decl -> func_def
Rule 4     ext_decl -> decl
Rule 5     decl -> decl_specs ;
Rule 6     decl -> decl_specs init_decl_list ;
Rule 7     init_decl_list -> init_decl
Rule 8     init_decl_list -> init_decl_list , init_decl
Rule 9     init_decl -> declr
Rule 10    init_decl -> declr = init
Rule 11    decl_specs -> stor_class_spec
Rule 12    decl_specs -> stor_class_spec decl_specs
Rule 13    decl_specs -> type_spec
Rule 14    decl_specs -> type_spec decl_specs
Rule 15    decl_specs -> type_qual
Rule 16    decl_specs -> type_qual decl_specs
Rule 17    decl_specs -> func_spec
Rule 18    decl_specs -> func_spec decl_specs
Rule 19    stor_class_spec -> TYPEDEF
Rule 20    stor_class_spec -> EXTERN
Rule 21    stor_class_spec -> STATIC
Rule 22    stor_class_spec -> AUTO
Rule 23    stor_class_spec -> REGISTER
Rule 24    func_spec -> INLINE
Rule 25    type_spec -> VOID
Rule 26    type_spec -> CHAR
Rule 27    type_spec -> SHORT
Rule 28    type_spec -> INT
Rule 29    type_spec -> LONG
Rule 30    type_spec -> FLOAT
Rule 31    type_spec -> DOUBLE
Rule 32    type_spec -> SIGNED
Rule 33    type_spec -> UNSIGNED
Rule 34    type_spec -> BOOL
Rule 35    type_spec -> struct_or_union_spec
Rule 36    type_spec -> enum_spec
Rule 37    type_qual -> CONST
Rule 38    type_qual -> RESTRICT
Rule 39    type_qual -> VOLATILE
Rule 40    enum_spec -> ENUM { enum_list }
Rule 41    enum_spec -> ENUM IDENTIFIER { enum_list }
Rule 42    enum_spec -> ENUM { enum_list , }
Rule 43    enum_spec -> ENUM IDENTIFIER { enum_list , }
Rule 44    enum_spec -> ENUM IDENTIFIER
Rule 45    enum_list -> enum
Rule 46    enum_list -> enum_list , enum
Rule 47    enum -> IDENTIFIER
Rule 48    enum -> IDENTIFIER = const_expr
Rule 49    struct_or_union_spec -> struct_or_union IDENTIFIER { struct_decl_list }
Rule 50    struct_or_union_spec -> struct_or_union { struct_decl_list }
Rule 51    struct_or_union_spec -> struct_or_union IDENTIFIER
Rule 52    struct_or_union -> STRUCT
Rule 53    struct_or_union -> UNION
Rule 54    struct_decl_list -> struct_decl
Rule 55    struct_decl_list -> struct_decl_list struct_decl
Rule 56    struct_decl -> spec_qual_list struct_declr_list ;
Rule 57    spec_qual_list -> type_spec spec_qual_list
Rule 58    spec_qual_list -> type_spec
Rule 59    spec_qual_list -> type_qual spec_qual_list
Rule 60    spec_qual_list -> type_qual
Rule 61    struct_declr_list -> struct_declr
Rule 62    struct_declr_list -> struct_declr_list , struct_declr
Rule 63    struct_declr -> declr
Rule 64    struct_declr -> : const_expr
Rule 65    struct_declr -> declr : const_expr
Rule 66    declr -> ptr direct_declr
Rule 67    declr -> direct_declr
Rule 68    ptr -> *
Rule 69    ptr -> * type_qual_list
Rule 70    ptr -> * ptr
Rule 71    ptr -> * type_qual_list ptr
Rule 72    type_qual_list -> type_qual
Rule 73    type_qual_list -> type_qual_list type_qual
Rule 74    direct_declr -> IDENTIFIER
Rule 75    direct_declr -> ( declr )
Rule 76    direct_declr -> direct_declr [ type_qual_list assign_expr ]
Rule 77    direct_declr -> direct_declr [ type_qual_list ]
Rule 78    direct_declr -> direct_declr [ assign_expr ]
Rule 79    direct_declr -> direct_declr [ STATIC type_qual_list assign_expr ]
Rule 80    direct_declr -> direct_declr [ type_qual_list STATIC assign_expr ]
Rule 81    direct_declr -> direct_declr [ type_qual_list * ]
Rule 82    direct_declr -> direct_declr [ * ]
Rule 83    direct_declr -> direct_declr [ ]
Rule 84    direct_declr -> direct_declr ( param_type_list )
Rule 85    direct_declr -> direct_declr ( id_list )
Rule 86    direct_declr -> direct_declr ( )
Rule 87    id_list -> IDENTIFIER
Rule 88    id_list -> id_list , IDENTIFIER
Rule 89    assign_expr -> cond_expr
Rule 90    assign_expr -> unary_expr assign_op assign_expr
Rule 91    assign_op -> =
Rule 92    assign_op -> MUL_ASSIGN
Rule 93    assign_op -> DIV_ASSIGN
Rule 94    assign_op -> MOD_ASSIGN
Rule 95    assign_op -> ADD_ASSIGN
Rule 96    assign_op -> SUB_ASSIGN
Rule 97    assign_op -> LEFT_ASSIGN
Rule 98    assign_op -> RIGHT_ASSIGN
Rule 99    assign_op -> AND_ASSIGN
Rule 100   assign_op -> XOR_ASSIGN
Rule 101   assign_op -> OR_ASSIGN
Rule 102   const_expr -> cond_expr
Rule 103   cond_expr -> log_or_expr
Rule 104   cond_expr -> log_or_expr ? expr : cond_expr
Rule 105   log_or_expr -> log_and_expr
Rule 106   log_or_expr -> log_or_expr OR_OP log_and_expr
Rule 107   log_and_expr -> incl_or_expr
Rule 108   log_and_expr -> log_and_expr AND_OP incl_or_expr
Rule 109   incl_or_expr -> excl_or_expr
Rule 110   incl_or_expr -> incl_or_expr | excl_or_expr
Rule 111   excl_or_expr -> and_expr
Rule 112   excl_or_expr -> excl_or_expr ^ and_expr
Rule 113   and_expr -> eq_expr
Rule 114   and_expr -> and_expr & eq_expr
Rule 115   eq_expr -> rel_expr
Rule 116   eq_expr -> eq_expr EQ_OP rel_expr
Rule 117   eq_expr -> eq_expr NE_OP rel_expr
Rule 118   rel_expr -> shift_expr
Rule 119   rel_expr -> rel_expr < shift_expr
Rule 120   rel_expr -> rel_expr > shift_expr
Rule 121   rel_expr -> rel_expr LE_OP shift_expr
Rule 122   rel_expr -> rel_expr GE_OP shift_expr
Rule 123   shift_expr -> add_expr
Rule 124   shift_expr -> shift_expr LEFT_OP add_expr
Rule 125   shift_expr -> shift_expr RIGHT_OP add_expr
Rule 126   add_expr -> mult_expr
Rule 127   add_expr -> add_expr + mult_expr
Rule 128   add_expr -> add_expr - mult_expr
Rule 129   mult_expr -> cast_expr
Rule 130   mult_expr -> mult_expr * cast_expr
Rule 131   mult_expr -> mult_expr / cast_expr
Rule 132   mult_expr -> mult_expr % cast_expr
Rule 133   cast_expr -> unary_expr
Rule 134   cast_expr -> ( type_name ) cast_expr
Rule 135   unary_expr -> post_expr
Rule 136   unary_expr -> INC_OP unary_expr
Rule 137   unary_expr -> DEC_OP unary_expr
Rule 138   unary_expr -> unary_op cast_expr
Rule 139   unary_expr -> SIZEOF unary_expr
Rule 140   unary_expr -> SIZEOF ( type_name )
Rule 141   unary_op -> &
Rule 142   unary_op -> *
Rule 143   unary_op -> +
Rule 144   unary_op -> -
Rule 145   unary_op -> ~
Rule 146   unary_op -> !
Rule 147   post_expr -> prim_expr
Rule 148   post_expr -> post_expr [ expr ]
Rule 149   post_expr -> post_expr ( )
Rule 150   post_expr -> post_expr ( arg_expr_list )
Rule 151   post_expr -> post_expr . IDENTIFIER
Rule 152   post_expr -> post_expr PTR_OP IDENTIFIER
Rule 153   post_expr -> post_expr INC_OP
Rule 154   post_expr -> post_expr DEC_OP
Rule 155   post_expr -> ( type_name ) { init_list }
Rule 156   post_expr -> ( type_name ) { init_list , }
Rule 157   prim_expr -> IDENTIFIER
Rule 158   prim_expr -> CONSTANT
Rule 159   prim_expr -> STRING_LITERAL
Rule 160   prim_expr -> ( expr )
Rule 161   expr -> assign_expr
Rule 162   expr -> expr , assign_expr
Rule 163   type_name -> spec_qual_list
Rule 164   type_name -> spec_qual_list abs_declr
Rule 165   abs_declr -> ptr
Rule 166   abs_declr -> direct_abs_declr
Rule 167   abs_declr -> ptr direct_abs_declr
Rule 168   direct_abs_declr -> ( abs_declr )
Rule 169   direct_abs_declr -> [ ]
Rule 170   direct_abs_declr -> [ assign_expr ]
Rule 171   direct_abs_declr -> direct_abs_declr [ ]
Rule 172   direct_abs_declr -> direct_abs_declr [ assign_expr ]
Rule 173   direct_abs_declr -> [ * ]
Rule 174   direct_abs_declr -> direct_abs_declr [ * ]
Rule 175   direct_abs_declr -> ( )
Rule 176   direct_abs_declr -> ( param_type_list )
Rule 177   direct_abs_declr -> direct_abs_declr ( )
Rule 178   direct_abs_declr -> direct_abs_declr ( param_type_list )
Rule 179   param_type_list -> param_list
Rule 180   param_type_list -> param_list , ELLIPSIS
Rule 181   param_list -> param_decl
Rule 182   param_list -> param_list , param_decl
Rule 183   param_decl -> decl_specs declr
Rule 184   param_decl -> decl_specs abs_declr
Rule 185   param_decl -> decl_specs
Rule 186   arg_expr_list -> assign_expr
Rule 187   arg_expr_list -> arg_expr_list , assign_expr
Rule 188   init_list -> init
Rule 189   init_list -> desig init
Rule 190   init_list -> init_list , init
Rule 191   init_list -> init_list , desig init
Rule 192   init -> assign_expr
Rule 193   init -> { init_list }
Rule 194   init -> { init_list , }
Rule 195   desig_list -> desig
Rule 196   desig_list -> desig_list desig
Rule 197   desig -> [ const_expr ]
Rule 198   desig -> . IDENTIFIER
Rule 199   func_def -> decl_specs declr decl_list comp_stmt
Rule 200   func_def -> decl_specs declr comp_stmt
Rule 201   decl_list -> decl
Rule 202   decl_list -> decl_list decl
Rule 203   comp_stmt -> { }
Rule 204   comp_stmt -> { block_item_list }
Rule 205   block_item_list -> block_item
Rule 206   block_item_list -> block_item_list block_item
Rule 207   block_item -> decl
Rule 208   block_item -> stmt
Rule 209   stmt -> labeled_stmt
Rule 210   stmt -> comp_stmt
Rule 211   stmt -> expr_stmt
Rule 212   stmt -> sel_stmt
Rule 213   stmt -> iter_stmt
Rule 214   stmt -> jump_stmt
Rule 215   labeled_stmt -> IDENTIFIER : stmt
Rule 216   labeled_stmt -> CASE const_expr : stmt
Rule 217   labeled_stmt -> DEFAULT : stmt
Rule 218   expr_stmt -> ;
Rule 219   expr_stmt -> expr ;
Rule 220   sel_stmt -> IF ( expr ) stmt ELSE stmt
Rule 221   sel_stmt -> IF ( expr ) stmt
Rule 222   sel_stmt -> SWITCH ( expr ) stmt
Rule 223   iter_stmt -> WHILE ( expr ) stmt
Rule 224   iter_stmt -> DO stmt WHILE ( expr ) ;
Rule 225   iter_stmt -> FOR ( expr_stmt expr_stmt ) stmt
Rule 226   iter_stmt -> FOR ( expr_stmt expr_stmt expr ) stmt
Rule 227   iter_stmt -> FOR ( decl expr_stmt ) stmt
Rule 228   iter_stmt -> FOR ( decl expr_stmt expr ) stmt
Rule 229   jump_stmt -> GOTO IDENTIFIER ;
Rule 230   jump_stmt -> CONTINUE ;
Rule 231   jump_stmt -> BREAK ;
Rule 232   jump_stmt -> RETURN ;
Rule 233   jump_stmt -> RETURN expr ;

Terminals, with rules where they appear

!                    : 146
%                    : 132
&                    : 114 141
(                    : 75 84 85 86 134 140 149 150 155 156 160 168 175 176 177 178 220 221 222 223 224 225 226 227 228
)                    : 75 84 85 86 134 140 149 150 155 156 160 168 175 176 177 178 220 221 222 223 224 225 226 227 228
*                    : 68 69 70 71 81 82 130 142 173 174
+                    : 127 143
,                    : 8 42 43 46 62 88 156 162 180 182 187 190 191 194
-                    : 128 144
.                    : 151 198
/                    : 131
:                    : 64 65 104 215 216 217
;                    : 5 6 56 218 219 224 229 230 231 232 233
<                    : 119
=                    : 10 48 91
>                    : 120
?                    : 104
ADD_ASSIGN           : 95
AND_ASSIGN           : 99
AND_OP               : 108
AUTO                 : 22
BOOL                 : 34
BREAK                : 231
CASE                 : 216
CHAR                 : 26
CONST                : 37
CONSTANT             : 158
CONTINUE             : 230
DEC_OP               : 137 154
DEFAULT              : 217
DIV_ASSIGN           : 93
DO                   : 224
DOUBLE               : 31
ELLIPSIS             : 180
ELSE                 : 220
ENUM                 : 40 41 42 43 44
EQ_OP                : 116
EXTERN               : 20
FLOAT                : 30
FOR                  : 225 226 227 228
GE_OP                : 122
GOTO                 : 229
IDENTIFIER           : 41 43 44 47 48 49 51 74 87 88 151 152 157 198 215 229
IF                   : 220 221
INC_OP               : 136 153
INLINE               : 24
INT                  : 28
LEFT_ASSIGN          : 97
LEFT_OP              : 124
LE_OP                : 121
LONG                 : 29
MOD_ASSIGN           : 94
MUL_ASSIGN           : 92
NE_OP                : 117
OR_ASSIGN            : 101
OR_OP                : 106
PTR_OP               : 152
REGISTER             : 23
RESTRICT             : 38
RETURN               : 232 233
RIGHT_ASSIGN         : 98
RIGHT_OP             : 125
SHORT                : 27
SIGNED               : 32
SIZEOF               : 139 140
STATIC               : 21 79 80
STRING_LITERAL       : 159
STRUCT               : 52
SUB_ASSIGN           : 96
SWITCH               : 222
TYPEDEF              : 19
UNION                : 53
UNSIGNED             : 33
VOID                 : 25
VOLATILE             : 39
WHILE                : 223 224
XOR_ASSIGN           : 100
[                    : 76 77 78 79 80 81 82 83 148 169 170 171 172 173 174 197
]                    : 76 77 78 79 80 81 82 83 148 169 170 171 172 173 174 197
^                    : 112
error                : 
{                    : 40 41 42 43 49 50 155 156 193 194 203 204
|                    : 110
}                    : 40 41 42 43 49 50 155 156 193 194 203 204
~                    : 145

Nonterminals, with rules where they appear

abs_declr            : 164 168 184
add_expr             : 123 124 125 127 128
and_expr             : 111 112 114
arg_expr_list        : 150 187
assign_expr          : 76 78 79 80 90 161 162 170 172 186 187 192
assign_op            : 90
block_item           : 205 206
block_item_list      : 204 206
cast_expr            : 129 130 131 132 134 138
comp_stmt            : 199 200 210
cond_expr            : 89 102 104
const_expr           : 48 64 65 197 216
decl                 : 4 201 202 207 227 228
decl_list            : 199 202
decl_specs           : 5 6 12 14 16 18 183 184 185 199 200
declr                : 9 10 63 65 75 183 199 200
desig                : 189 191 195 196
desig_list           : 196
direct_abs_declr     : 166 167 171 172 174 177 178
direct_declr         : 66 67 76 77 78 79 80 81 82 83 84 85 86
enum                 : 45 46
enum_list            : 40 41 42 43 46
enum_spec            : 36
eq_expr              : 113 114 116 117
excl_or_expr         : 109 110 112
expr                 : 104 148 160 162 219 220 221 222 223 224 226 228 233
expr_stmt            : 211 225 225 226 226 227 228
ext_decl             : 1 2
func_def             : 3
func_spec            : 17 18
id_list              : 85 88
incl_or_expr         : 107 108 110
init                 : 10 188 189 190 191
init_decl            : 7 8
init_decl_list       : 6 8
init_list            : 155 156 190 191 193 194
iter_stmt            : 213
jump_stmt            : 214
labeled_stmt         : 209
log_and_expr         : 105 106 108
log_or_expr          : 103 104 106
mult_expr            : 126 127 128 130 131 132
param_decl           : 181 182
param_list           : 179 180 182
param_type_list      : 84 176 178
post_expr            : 135 148 149 150 151 152 153 154
prim_expr            : 147
program              : 2 0
ptr                  : 66 70 71 165 167
rel_expr             : 115 116 117 119 120 121 122
sel_stmt             : 212
shift_expr           : 118 119 120 121 122 124 125
spec_qual_list       : 56 57 59 163 164
stmt                 : 208 215 216 217 220 220 221 222 223 224 225 226 227 228
stor_class_spec      : 11 12
struct_decl          : 54 55
struct_decl_list     : 49 50 55
struct_declr         : 61 62
struct_declr_list    : 56 62
struct_or_union      : 49 50 51
struct_or_union_spec : 35
type_name            : 134 140 155 156
type_qual            : 15 16 59 60 72 73
type_qual_list       : 69 71 73 76 77 79 80 81
type_spec            : 13 14 57 58
unary_expr           : 90 133 136 137 139
unary_op             : 138

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . ext_decl
    (2) program -> . program ext_decl
    (3) ext_decl -> . func_def
    (4) ext_decl -> . decl
    (199) func_def -> . decl_specs declr decl_list comp_stmt
    (200) func_def -> . decl_specs declr comp_stmt
    (5) decl -> . decl_specs ;
    (6) decl -> . decl_specs init_decl_list ;
    (11) decl_specs -> . stor_class_spec
    (12) decl_specs -> . stor_class_spec decl_specs
    (13) decl_specs -> . type_spec
    (14) decl_specs -> . type_spec decl_specs
    (15) decl_specs -> . type_qual
    (16) decl_specs -> . type_qual decl_specs
    (17) decl_specs -> . func_spec
    (18) decl_specs -> . func_spec decl_specs
    (19) stor_class_spec -> . TYPEDEF
    (20) stor_class_spec -> . EXTERN
    (21) stor_class_spec -> . STATIC
    (22) stor_class_spec -> . AUTO
    (23) stor_class_spec -> . REGISTER
    (25) type_spec -> . VOID
    (26) type_spec -> . CHAR
    (27) type_spec -> . SHORT
    (28) type_spec -> . INT
    (29) type_spec -> . LONG
    (30) type_spec -> . FLOAT
    (31) type_spec -> . DOUBLE
    (32) type_spec -> . SIGNED
    (33) type_spec -> . UNSIGNED
    (34) type_spec -> . BOOL
    (35) type_spec -> . struct_or_union_spec
    (36) type_spec -> . enum_spec
    (37) type_qual -> . CONST
    (38) type_qual -> . RESTRICT
    (39) type_qual -> . VOLATILE
    (24) func_spec -> . INLINE
    (49) struct_or_union_spec -> . struct_or_union IDENTIFIER { struct_decl_list }
    (50) struct_or_union_spec -> . struct_or_union { struct_decl_list }
    (51) struct_or_union_spec -> . struct_or_union IDENTIFIER
    (40) enum_spec -> . ENUM { enum_list }
    (41) enum_spec -> . ENUM IDENTIFIER { enum_list }
    (42) enum_spec -> . ENUM { enum_list , }
    (43) enum_spec -> . ENUM IDENTIFIER { enum_list , }
    (44) enum_spec -> . ENUM IDENTIFIER
    (52) struct_or_union -> . STRUCT
    (53) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 10
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 12
    AUTO            shift and go to state 13
    REGISTER        shift and go to state 14
    VOID            shift and go to state 15
    CHAR            shift and go to state 16
    SHORT           shift and go to state 17
    INT             shift and go to state 18
    LONG            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    SIGNED          shift and go to state 22
    UNSIGNED        shift and go to state 23
    BOOL            shift and go to state 24
    CONST           shift and go to state 27
    RESTRICT        shift and go to state 28
    VOLATILE        shift and go to state 29
    INLINE          shift and go to state 30
    ENUM            shift and go to state 32
    STRUCT          shift and go to state 33
    UNION           shift and go to state 34

    program                        shift and go to state 1
    ext_decl                       shift and go to state 2
    func_def                       shift and go to state 3
    decl                           shift and go to state 4
    decl_specs                     shift and go to state 5
    stor_class_spec                shift and go to state 6
    type_spec                      shift and go to state 7
    type_qual                      shift and go to state 8
    func_spec                      shift and go to state 9
    struct_or_union_spec           shift and go to state 25
    enum_spec                      shift and go to state 26
    struct_or_union                shift and go to state 31

state 1

    (0) S' -> program .
    (2) program -> program . ext_decl
    (3) ext_decl -> . func_def
    (4) ext_decl -> . decl
    (199) func_def -> . decl_specs declr decl_list comp_stmt
    (200) func_def -> . decl_specs declr comp_stmt
    (5) decl -> . decl_specs ;
    (6) decl -> . decl_specs init_decl_list ;
    (11) decl_specs -> . stor_class_spec
    (12) decl_specs -> . stor_class_spec decl_specs
    (13) decl_specs -> . type_spec
    (14) decl_specs -> . type_spec decl_specs
    (15) decl_specs -> . type_qual
    (16) decl_specs -> . type_qual decl_specs
    (17) decl_specs -> . func_spec
    (18) decl_specs -> . func_spec decl_specs
    (19) stor_class_spec -> . TYPEDEF
    (20) stor_class_spec -> . EXTERN
    (21) stor_class_spec -> . STATIC
    (22) stor_class_spec -> . AUTO
    (23) stor_class_spec -> . REGISTER
    (25) type_spec -> . VOID
    (26) type_spec -> . CHAR
    (27) type_spec -> . SHORT
    (28) type_spec -> . INT
    (29) type_spec -> . LONG
    (30) type_spec -> . FLOAT
    (31) type_spec -> . DOUBLE
    (32) type_spec -> . SIGNED
    (33) type_spec -> . UNSIGNED
    (34) type_spec -> . BOOL
    (35) type_spec -> . struct_or_union_spec
    (36) type_spec -> . enum_spec
    (37) type_qual -> . CONST
    (38) type_qual -> . RESTRICT
    (39) type_qual -> . VOLATILE
    (24) func_spec -> . INLINE
    (49) struct_or_union_spec -> . struct_or_union IDENTIFIER { struct_decl_list }
    (50) struct_or_union_spec -> . struct_or_union { struct_decl_list }
    (51) struct_or_union_spec -> . struct_or_union IDENTIFIER
    (40) enum_spec -> . ENUM { enum_list }
    (41) enum_spec -> . ENUM IDENTIFIER { enum_list }
    (42) enum_spec -> . ENUM { enum_list , }
    (43) enum_spec -> . ENUM IDENTIFIER { enum_list , }
    (44) enum_spec -> . ENUM IDENTIFIER
    (52) struct_or_union -> . STRUCT
    (53) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 10
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 12
    AUTO            shift and go to state 13
    REGISTER        shift and go to state 14
    VOID            shift and go to state 15
    CHAR            shift and go to state 16
    SHORT           shift and go to state 17
    INT             shift and go to state 18
    LONG            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    SIGNED          shift and go to state 22
    UNSIGNED        shift and go to state 23
    BOOL            shift and go to state 24
    CONST           shift and go to state 27
    RESTRICT        shift and go to state 28
    VOLATILE        shift and go to state 29
    INLINE          shift and go to state 30
    ENUM            shift and go to state 32
    STRUCT          shift and go to state 33
    UNION           shift and go to state 34

    ext_decl                       shift and go to state 35
    func_def                       shift and go to state 3
    decl                           shift and go to state 4
    decl_specs                     shift and go to state 5
    stor_class_spec                shift and go to state 6
    type_spec                      shift and go to state 7
    type_qual                      shift and go to state 8
    func_spec                      shift and go to state 9
    struct_or_union_spec           shift and go to state 25
    enum_spec                      shift and go to state 26
    struct_or_union                shift and go to state 31

state 2

    (1) program -> ext_decl .

    TYPEDEF         reduce using rule 1 (program -> ext_decl .)
    EXTERN          reduce using rule 1 (program -> ext_decl .)
    STATIC          reduce using rule 1 (program -> ext_decl .)
    AUTO            reduce using rule 1 (program -> ext_decl .)
    REGISTER        reduce using rule 1 (program -> ext_decl .)
    VOID            reduce using rule 1 (program -> ext_decl .)
    CHAR            reduce using rule 1 (program -> ext_decl .)
    SHORT           reduce using rule 1 (program -> ext_decl .)
    INT             reduce using rule 1 (program -> ext_decl .)
    LONG            reduce using rule 1 (program -> ext_decl .)
    FLOAT           reduce using rule 1 (program -> ext_decl .)
    DOUBLE          reduce using rule 1 (program -> ext_decl .)
    SIGNED          reduce using rule 1 (program -> ext_decl .)
    UNSIGNED        reduce using rule 1 (program -> ext_decl .)
    BOOL            reduce using rule 1 (program -> ext_decl .)
    CONST           reduce using rule 1 (program -> ext_decl .)
    RESTRICT        reduce using rule 1 (program -> ext_decl .)
    VOLATILE        reduce using rule 1 (program -> ext_decl .)
    INLINE          reduce using rule 1 (program -> ext_decl .)
    ENUM            reduce using rule 1 (program -> ext_decl .)
    STRUCT          reduce using rule 1 (program -> ext_decl .)
    UNION           reduce using rule 1 (program -> ext_decl .)
    $end            reduce using rule 1 (program -> ext_decl .)


state 3

    (3) ext_decl -> func_def .

    TYPEDEF         reduce using rule 3 (ext_decl -> func_def .)
    EXTERN          reduce using rule 3 (ext_decl -> func_def .)
    STATIC          reduce using rule 3 (ext_decl -> func_def .)
    AUTO            reduce using rule 3 (ext_decl -> func_def .)
    REGISTER        reduce using rule 3 (ext_decl -> func_def .)
    VOID            reduce using rule 3 (ext_decl -> func_def .)
    CHAR            reduce using rule 3 (ext_decl -> func_def .)
    SHORT           reduce using rule 3 (ext_decl -> func_def .)
    INT             reduce using rule 3 (ext_decl -> func_def .)
    LONG            reduce using rule 3 (ext_decl -> func_def .)
    FLOAT           reduce using rule 3 (ext_decl -> func_def .)
    DOUBLE          reduce using rule 3 (ext_decl -> func_def .)
    SIGNED          reduce using rule 3 (ext_decl -> func_def .)
    UNSIGNED        reduce using rule 3 (ext_decl -> func_def .)
    BOOL            reduce using rule 3 (ext_decl -> func_def .)
    CONST           reduce using rule 3 (ext_decl -> func_def .)
    RESTRICT        reduce using rule 3 (ext_decl -> func_def .)
    VOLATILE        reduce using rule 3 (ext_decl -> func_def .)
    INLINE          reduce using rule 3 (ext_decl -> func_def .)
    ENUM            reduce using rule 3 (ext_decl -> func_def .)
    STRUCT          reduce using rule 3 (ext_decl -> func_def .)
    UNION           reduce using rule 3 (ext_decl -> func_def .)
    $end            reduce using rule 3 (ext_decl -> func_def .)


state 4

    (4) ext_decl -> decl .

    TYPEDEF         reduce using rule 4 (ext_decl -> decl .)
    EXTERN          reduce using rule 4 (ext_decl -> decl .)
    STATIC          reduce using rule 4 (ext_decl -> decl .)
    AUTO            reduce using rule 4 (ext_decl -> decl .)
    REGISTER        reduce using rule 4 (ext_decl -> decl .)
    VOID            reduce using rule 4 (ext_decl -> decl .)
    CHAR            reduce using rule 4 (ext_decl -> decl .)
    SHORT           reduce using rule 4 (ext_decl -> decl .)
    INT             reduce using rule 4 (ext_decl -> decl .)
    LONG            reduce using rule 4 (ext_decl -> decl .)
    FLOAT           reduce using rule 4 (ext_decl -> decl .)
    DOUBLE          reduce using rule 4 (ext_decl -> decl .)
    SIGNED          reduce using rule 4 (ext_decl -> decl .)
    UNSIGNED        reduce using rule 4 (ext_decl -> decl .)
    BOOL            reduce using rule 4 (ext_decl -> decl .)
    CONST           reduce using rule 4 (ext_decl -> decl .)
    RESTRICT        reduce using rule 4 (ext_decl -> decl .)
    VOLATILE        reduce using rule 4 (ext_decl -> decl .)
    INLINE          reduce using rule 4 (ext_decl -> decl .)
    ENUM            reduce using rule 4 (ext_decl -> decl .)
    STRUCT          reduce using rule 4 (ext_decl -> decl .)
    UNION           reduce using rule 4 (ext_decl -> decl .)
    $end            reduce using rule 4 (ext_decl -> decl .)


state 5

    (199) func_def -> decl_specs . declr decl_list comp_stmt
    (200) func_def -> decl_specs . declr comp_stmt
    (5) decl -> decl_specs . ;
    (6) decl -> decl_specs . init_decl_list ;
    (66) declr -> . ptr direct_declr
    (67) declr -> . direct_declr
    (7) init_decl_list -> . init_decl
    (8) init_decl_list -> . init_decl_list , init_decl
    (68) ptr -> . *
    (69) ptr -> . * type_qual_list
    (70) ptr -> . * ptr
    (71) ptr -> . * type_qual_list ptr
    (74) direct_declr -> . IDENTIFIER
    (75) direct_declr -> . ( declr )
    (76) direct_declr -> . direct_declr [ type_qual_list assign_expr ]
    (77) direct_declr -> . direct_declr [ type_qual_list ]
    (78) direct_declr -> . direct_declr [ assign_expr ]
    (79) direct_declr -> . direct_declr [ STATIC type_qual_list assign_expr ]
    (80) direct_declr -> . direct_declr [ type_qual_list STATIC assign_expr ]
    (81) direct_declr -> . direct_declr [ type_qual_list * ]
    (82) direct_declr -> . direct_declr [ * ]
    (83) direct_declr -> . direct_declr [ ]
    (84) direct_declr -> . direct_declr ( param_type_list )
    (85) direct_declr -> . direct_declr ( id_list )
    (86) direct_declr -> . direct_declr ( )
    (9) init_decl -> . declr
    (10) init_decl -> . declr = init

    ;               shift and go to state 37
    *               shift and go to state 42
    IDENTIFIER      shift and go to state 43
    (               shift and go to state 44

    declr                          shift and go to state 36
    init_decl_list                 shift and go to state 38
    ptr                            shift and go to state 39
    direct_declr                   shift and go to state 40
    init_decl                      shift and go to state 41

state 6

    (11) decl_specs -> stor_class_spec .
    (12) decl_specs -> stor_class_spec . decl_specs
    (11) decl_specs -> . stor_class_spec
    (12) decl_specs -> . stor_class_spec decl_specs
    (13) decl_specs -> . type_spec
    (14) decl_specs -> . type_spec decl_specs
    (15) decl_specs -> . type_qual
    (16) decl_specs -> . type_qual decl_specs
    (17) decl_specs -> . func_spec
    (18) decl_specs -> . func_spec decl_specs
    (19) stor_class_spec -> . TYPEDEF
    (20) stor_class_spec -> . EXTERN
    (21) stor_class_spec -> . STATIC
    (22) stor_class_spec -> . AUTO
    (23) stor_class_spec -> . REGISTER
    (25) type_spec -> . VOID
    (26) type_spec -> . CHAR
    (27) type_spec -> . SHORT
    (28) type_spec -> . INT
    (29) type_spec -> . LONG
    (30) type_spec -> . FLOAT
    (31) type_spec -> . DOUBLE
    (32) type_spec -> . SIGNED
    (33) type_spec -> . UNSIGNED
    (34) type_spec -> . BOOL
    (35) type_spec -> . struct_or_union_spec
    (36) type_spec -> . enum_spec
    (37) type_qual -> . CONST
    (38) type_qual -> . RESTRICT
    (39) type_qual -> . VOLATILE
    (24) func_spec -> . INLINE
    (49) struct_or_union_spec -> . struct_or_union IDENTIFIER { struct_decl_list }
    (50) struct_or_union_spec -> . struct_or_union { struct_decl_list }
    (51) struct_or_union_spec -> . struct_or_union IDENTIFIER
    (40) enum_spec -> . ENUM { enum_list }
    (41) enum_spec -> . ENUM IDENTIFIER { enum_list }
    (42) enum_spec -> . ENUM { enum_list , }
    (43) enum_spec -> . ENUM IDENTIFIER { enum_list , }
    (44) enum_spec -> . ENUM IDENTIFIER
    (52) struct_or_union -> . STRUCT
    (53) struct_or_union -> . UNION

    ;               reduce using rule 11 (decl_specs -> stor_class_spec .)
    *               reduce using rule 11 (decl_specs -> stor_class_spec .)
    IDENTIFIER      reduce using rule 11 (decl_specs -> stor_class_spec .)
    (               reduce using rule 11 (decl_specs -> stor_class_spec .)
    [               reduce using rule 11 (decl_specs -> stor_class_spec .)
    ,               reduce using rule 11 (decl_specs -> stor_class_spec .)
    )               reduce using rule 11 (decl_specs -> stor_class_spec .)
    TYPEDEF         shift and go to state 10
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 12
    AUTO            shift and go to state 13
    REGISTER        shift and go to state 14
    VOID            shift and go to state 15
    CHAR            shift and go to state 16
    SHORT           shift and go to state 17
    INT             shift and go to state 18
    LONG            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    SIGNED          shift and go to state 22
    UNSIGNED        shift and go to state 23
    BOOL            shift and go to state 24
    CONST           shift and go to state 27
    RESTRICT        shift and go to state 28
    VOLATILE        shift and go to state 29
    INLINE          shift and go to state 30
    ENUM            shift and go to state 32
    STRUCT          shift and go to state 33
    UNION           shift and go to state 34

    stor_class_spec                shift and go to state 6
    decl_specs                     shift and go to state 45
    type_spec                      shift and go to state 7
    type_qual                      shift and go to state 8
    func_spec                      shift and go to state 9
    struct_or_union_spec           shift and go to state 25
    enum_spec                      shift and go to state 26
    struct_or_union                shift and go to state 31

state 7
